# SimuAlpha

./: .env.example  .gitignore  COMPLETE_AUDIT.md  DEPLOY.md  DEPLOYMENT.md  DESIGN_SYSTEM.md  MCP_SETUP.md  Makefile  PIPELINE_AUDIT.md  README.md  TIER_INTEGRATION_COMPLETE.md  WEEKLY_REPORT_SETUP.md  docker-compose.yml  mcp-server.js  package-lock.json  package.json  pnpm-lock.yaml  railway.json  supabase_migration.sql
apps/api/: .env.example  Dockerfile  README.md  alembic.ini  nixpacks.toml  package.json  pyproject.toml  start.sh
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_add_job_lifecycle_columns.py  003_add_user_auth_models.py  004_distress_reports_schema.py
apps/api/app/: main.py
apps/api/app/api/: router.py
apps/api/app/api/routes/: actors.py  auth.py  backtest.py  calibrations.py  events.py  (+17 more)
apps/api/app/core/: auth.py  config.py  exceptions.py  security.py
apps/api/app/data/: seed.py
apps/api/app/db/: base.py  models.py  session.py
apps/api/app/engine/: data_provider.py  distress_scorer.py
apps/api/app/repositories/: actor.py  calibration.py  regime.py  replay.py  scenario.py  signal.py  simulation_run.py
apps/api/app/routers/: health.py
apps/api/app/schemas/: actors.py  context.py  regime.py  replay.py  report.py  runs.py  scenarios.py  signals.py  simulation.py  symbols.py  system.py
apps/api/app/services/: actors.py  analysis.py  backtest.py  calibration_service.py  context.py  engine_bridge.py  job_runner.py  regime.py  replay.py  replay_persistence.py  scenarios.py  signals.py  simulation.py  simulation_persistence.py  system.py
apps/api/tests/: conftest.py  test_api_endpoints.py  test_auth.py  test_endpoints.py  test_events.py  test_health.py  test_jobs.py  test_models.py  test_repositories.py  test_symbols.py
apps/worker/: .env.example  Dockerfile  README.md  nixpacks.toml  package.json  pyproject.toml
apps/worker/tests/: test_data_provider.py  test_engine.py  test_engine_replay.py  test_features.py  test_jobs.py  test_queue.py  test_replay.py  test_simulation.py
apps/worker/worker/: main.py  persistence.py
apps/worker/worker/core/: config.py  db.py  logging.py
apps/worker/worker/data/: seed_state.py  vocab.py
apps/worker/worker/data_providers/: base.py  yahoo.py
apps/worker/worker/engine/: aggregator.py  calibration.py  features.py  historical_replay.py  market_state.py  regime_engine.py  replay_engine.py  scenario_engine.py  signal_engine.py  simulation.py
apps/worker/worker/generators/: actor_generator.py  context_generator.py  regime_generator.py  replay_generator.py  scenario_generator.py  signal_generator.py
apps/worker/worker/jobs/: calibration_job.py  replay_job.py  scheduled_jobs.py  simulation_job.py
apps/worker/worker/queue/: __init__.py  connection.py  enqueue.py  scheduled_tasks.py  scheduler.py  tasks.py
apps/worker/worker/schemas/: actor.py  context.py  regime.py  replay.py  scenario.py  signal.py  system.py
apps/worker/worker/services/: job_registry.py  replay_service.py  simulation_service.py
apps/worker/worker/tasks/: simulation.py
(+430 files in other folders)
