[project]
name = "simualpha-worker"
version = "0.1.0"
description = "SimuAlpha simulation worker service"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "python-dotenv>=1.0,<2",
    "pandas>=2.0",
    "numpy>=1.24",
    "yfinance>=0.2.30",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]
queue = [
    "redis>=5.0,<6",
]

[project.scripts]
simualpha-worker = "worker.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
